--- a/AltNav/Dockerfile
+++ b/AltNav/Dockerfile
@@ -1,10 +1,10 @@
 FROM ubuntu:22.04
 RUN apt update && apt install -y make g++ build-essential autoconf libssl-dev libtool pkgconf
-ENV LD_LIBRARY_PATH=/working/code-gen/build/libs:/working/code-gen/local_install/lib
-WORKDIR /working
-COPY code-gen /working/code-gen
+ENV LD_LIBRARY_PATH=/root/code-gen/build/libs:/root/code-gen/local_install/lib
+WORKDIR /root
+COPY code-gen /root/code-gen
 RUN make -C code-gen
-COPY src /working/src
-COPY Makefile /working/
+COPY src /root/src
+COPY Makefile /root
 RUN make
-CMD ["/working/alt_nav"]
+CMD ["alt_nav"]
