--- a/AltNav/Dockerfile
+++ b/AltNav/Dockerfile
@@ -1,5 +1,4 @@
-FROM ubuntu:22.04
-RUN apt update && apt install -y make g++ build-essential autoconf libssl-dev libtool pkgconf
+FROM tangramflex/pro-builder:latest AS build
 ENV LD_LIBRARY_PATH=/root/code-gen/build/libs:/root/code-gen/local_install/lib
 WORKDIR /root
 COPY code-gen /root/code-gen
