--- a/SatNav/Dockerfile
+++ b/SatNav/Dockerfile
@@ -4,7 +4,7 @@ ENV LD_LIBRARY_PATH=/working/code-gen/build/libs:/working/code-gen/local_install
 WORKDIR /working
 COPY code-gen /working/code-gen
 RUN make -C code-gen
-COPY src /working/src
-COPY Makefile /working/
+COPY SatNav/src /working/src
+COPY SatNav/Makefile /working/
 RUN make
 CMD ["/working/sat_nav"]
